--- a/.github/workflows/android-kivy-build.yaml
+++ b/.github/workflows/android-kivy-build.yaml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/cache@v4
       with:
         path: .buildozer_global
-        key: buildozer-global-${{ hashFiles('test_app/buildozer.spec') }} # Replace with your path
+        key: buildozer-global-${{ hashFiles('./buildozer.spec') }} # Replace with your path
 
     - name: Build with Buildozer
       uses: ArtemSBulgakov/buildozer-action@v1
