--- a/.github/workflows/android-kivy-build.yaml
+++ b/.github/workflows/android-kivy-build.yaml
@@ -23,12 +23,18 @@ jobs:
         path: .buildozer_global
         key: buildozer-global-${{ hashFiles('./buildozer.spec') }} # Replace with your path
 
-    - name: Build with Buildozer
-      uses: ArtemSBulgakov/buildozer-action@v1
-      id: buildozer
+
+    - name: Build APK
+      uses: digreatbrian/buildozer-action@v2
       with:
-        command: buildozer android debug
-        buildozer_version: latest
+        python-version: 3.11
+        buildozer-cmd: buildozer -v android debug
+   # - name: Build with Buildozer
+   #   uses: ArtemSBulgakov/buildozer-action@v1
+   #   id: buildozer
+   #   with:
+   #     command: buildozer android debug
+   #     buildozer_version: latest
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
