🔧 missing multiline indicator

--- a/.github/workflows/android-kivy-build.yaml
+++ b/.github/workflows/android-kivy-build.yaml
@@ -25,7 +25,7 @@ jobs:
 
 
     - name: Missing dependencies
-      run:
+      run: |
         wget http://security.ubuntu.com/ubuntu/pool/universe/n/ncurses/libtinfo5_6.3-2ubuntu0.1_amd64.deb
         sudo apt install ./libtinfo5_6.3-2ubuntu0.1_amd64.deb
         python3 -m pip install libtool
