--- a/.github/workflows/android-kivy-build.yaml
+++ b/.github/workflows/android-kivy-build.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Missing dependencies
       run: |
         wget http://security.ubuntu.com/ubuntu/pool/universe/n/ncurses/libtinfo5_6.3-2ubuntu0.1_amd64.deb
-        sudo apt install ./libtinfo5_6.3-2ubuntu0.1_amd64.deb
+        sudo apt install ./libtinfo5_6.3-2ubuntu0.1_amd64.deb libltdl-dev
         python3 -m pip install libtool
         python3 -m pip install docwriter
 
